# wiki2md

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  urls.txt
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-04-08-wiki2md-implementation.md  2026-04-09-wiki2md-clean-article-and-references-implementation.md  2026-04-09-wiki2md-phase2-batch-runtime-implementation.md  2026-04-09-wiki2md-readme-and-examples-polish-implementation.md  2026-04-09-wiki2md-release-and-readme-implementation.md  (+7 more)
examples/andrej-karpathy/: article.md  infobox.json  meta.json  references.json
examples/batch/: person-manifest.jsonl
examples/manifests/: fields-medal-core.jsonl  nobel-physics-core.jsonl  turing-award-core.jsonl
src/wiki2md/: assets.py  batch_manifest.py  batch_models.py  batch_planner.py  batch_runtime.py  batch_state.py  cli.py  client.py  discovery_extract.py  discovery_models.py  discovery_presets.py  discovery_service.py  discovery_writer.py  document.py  errors.py  models.py  normalize.py  output_paths.py  page_types.py  render_markdown.py  render_sources.py  service.py  urls.py  writer.py
tests/: test_assets.py  test_batch_manifest.py  test_batch_planner.py  test_batch_runtime.py  test_batch_state.py  test_cli.py  test_cli_smoke.py  test_client.py  test_discovery_extract.py  test_discovery_models.py  test_discovery_service.py  test_discovery_writer.py  test_normalize.py  test_output_paths.py  test_project_docs.py  test_project_workflows.py  test_render_markdown.py  test_render_sources.py  test_service.py  test_urls.py  test_writer.py
(+19 files in other folders)
