[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiki2md"
version = "0.1.0"
description = "Convert Wikipedia articles into clean Markdown artifacts for AI workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "BruceChia" },
]
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.28",
  "pydantic>=2.11",
  "PyYAML>=6.0",
  "typer>=0.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "respx>=0.22",
  "ruff>=0.11",
]

[project.scripts]
wiki2md = "wiki2md.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
